--- a/Assignments/Net_Core_Assignment_Middle/Net_Core_Assignment_Middle/Net_Core_Assignment_Middle.csproj
+++ b/Assignments/Net_Core_Assignment_Middle/Net_Core_Assignment_Middle/Net_Core_Assignment_Middle.csproj
@@ -8,9 +8,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Configuration" Version="8.0.0" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.19.6" />
     <PackageReference Include="Serilog" Version="3.1.1" />
     <PackageReference Include="Serilog.AspNetCore" Version="8.0.1" />
+    <PackageReference Include="Serilog.Settings.Configuration" Version="8.0.0" />
   </ItemGroup>
 
 </Project>
