--- a/Assignments/Net_Core_Assignment_Middle/Net_Core_Assignment_Middle/appsettings.json
+++ b/Assignments/Net_Core_Assignment_Middle/Net_Core_Assignment_Middle/appsettings.json
@@ -1,9 +1,37 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
+  "Serilog": {
+    "Using": [ "Serilog.Sinks.Console", "Serilog.Sinks.File" ],
+    "MinimumLevel": {
+      "Default": "Debug",
+      "Override": {
+        "Microsoft.AspNetCore": "Warning",
+        "System": "Warning"
+      }
+    },
+    "WriteTo": [
+      {
+        "Name": "Console",
+        "Args": {
+          "outputTemplate": "{Timestamp:yyyy-MM-dd HH:mm:ss} [{Level:u3}] {Message:lj}{NewLine}{Exception}"
+        }
+      },
+      {
+        "Name": "File",
+        "Args": {
+          "path": "Logs/log.txt",
+          "rollingInterval": "Hour",
+          "retainedFileCountLimit": 10
+        },
+        "Filter": [
+          {
+            "Name": "ByIncludingOnly",
+            "Args": {
+              "expression": "Level == Debug"
+            }
+          }
+        ]
+      }
+    ]
   },
   "AllowedHosts": "*"
 }
