--- a/Assignments/Net_Core_Assignment_Middle/Net_Core_Assignment_Middle/appsettings.json
+++ b/Assignments/Net_Core_Assignment_Middle/Net_Core_Assignment_Middle/appsettings.json
@@ -8,30 +8,28 @@
         "System": "Warning"
       }
     },
-    "WriteTo": [
-      {
-        "Name": "Console",
-        "Args": {
-          "outputTemplate": "{Timestamp:yyyy-MM-dd HH:mm:ss} [{Level:u3}] {Message:lj}{NewLine}{Exception}"
-        }
-      },
-      {
-        "Name": "File",
-        "Args": {
-          "path": "Logs/log.txt",
-          "rollingInterval": "Hour",
-          "retainedFileCountLimit": 10
-        },
-        "Filter": [
-          {
-            "Name": "ByIncludingOnly",
-            "Args": {
-              "expression": "Level == Debug"
-            }
+    "ConsoleLogger": {
+      "WriteTo": [
+        {
+          "Name": "Console",
+          "Args": {
+            "outputTemplate": "{Timestamp:yyyy-MM-dd HH:mm:ss} [{Level:u3}] {Message:lj}{NewLine}{Exception}"
           }
-        ]
-      }
-    ]
+        }
+      ]
+    },
+    "FileLogger": {
+      "WriteTo": [
+        {
+          "Name": "File",
+          "Args": {
+            "path": "Logs/log.txt",
+            "rollingInterval": "Hour",
+            "retainedFileCountLimit": 10
+          }
+        }
+      ]
+    }
   },
   "AllowedHosts": "*"
 }
