--- a/.gitignore
+++ b/.gitignore
@@ -362,3 +362,4 @@ MigrationBackup/
 # Fody - auto-generated XML schema
 FodyWeavers.xsd
 /Demos
+Assignments/MVCDotNetAssignment/MVCDotNetAssignment.WebApp/wwwroot/ExportedFiles/People.xlsx
