--- a/Assignments/API_ASPNET_Assignment1/API_ASPNET_Assignment1.Models/API_ASPNET_Assignment1.Models.csproj
+++ b/Assignments/API_ASPNET_Assignment1/API_ASPNET_Assignment1.Models/API_ASPNET_Assignment1.Models.csproj
@@ -12,4 +12,8 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="8.0.4" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Repositories\" />
+  </ItemGroup>
+
 </Project>
