--- a/Assignments/EF_Core_Assignment1/EF_Core_Assignment1.WebAPI/appsettings.Development.json
+++ b/Assignments/EF_Core_Assignment1/EF_Core_Assignment1.WebAPI/appsettings.Development.json
@@ -4,5 +4,8 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "SqlServer": "Server=localhost;Database=nashtech;User Id=sa;Password=YourStrong!Passw0rd;TrustServerCertificate=True"
   }
 }
