--- a/Assignments/EF_Core_Assignment1/docker-compose.override.yml
+++ b/Assignments/EF_Core_Assignment1/docker-compose.override.yml
@@ -5,5 +5,6 @@ services:
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
       - ASPNETCORE_HTTP_PORTS=8080
+      - SQLSERVER_CONNECTION_STRING=Server=sqlserver;Database=nashtech;User Id=sa;Password=YourStrong!Passw0rd;TrustServerCertificate=True
     ports:
       - "8080"
