--- a/Assignments/MVCDotNetAssignment/MVCDotNetAssignment.BusinessLogics/MVCDotNetAssignment.Application.csproj
+++ b/Assignments/MVCDotNetAssignment/MVCDotNetAssignment.BusinessLogics/MVCDotNetAssignment.Application.csproj
@@ -11,7 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\MVCDotNetAssignment.Models\MVCDotNetAssignment.Models.csproj" />
+    <ProjectReference Include="..\MVCDotNetAssignment.Models\MVCDotNetAssignment.Domain.csproj" />
   </ItemGroup>
 
 </Project>
