--- a/Assignments/MVCDotNetAssignment/MVCDotNetAssignment.WebApp/MVCDotNetAssignment.WebApp.csproj
+++ b/Assignments/MVCDotNetAssignment/MVCDotNetAssignment.WebApp/MVCDotNetAssignment.WebApp.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
@@ -12,8 +12,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\MVCDotNetAssignment.BusinessLogics\MVCDotNetAssignment.BusinessLogics.csproj" />
-    <ProjectReference Include="..\MVCDotNetAssignment.Models\MVCDotNetAssignment.Models.csproj" />
+    <ProjectReference Include="..\MVCDotNetAssignment.BusinessLogics\MVCDotNetAssignment.Application.csproj" />
+    <ProjectReference Include="..\MVCDotNetAssignment.Models\MVCDotNetAssignment.Domain.csproj" />
   </ItemGroup>
 
   <ItemGroup>
