--- a/Assignments/EF_Core_Assignment1/EF_Core_Assignment1.WebAPI/EF_Core_Assignment1.WebAPI.csproj
+++ b/Assignments/EF_Core_Assignment1/EF_Core_Assignment1.WebAPI/EF_Core_Assignment1.WebAPI.csproj
@@ -24,6 +24,7 @@
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
     <PackageReference Include="Swashbuckle.AspNetCore.Filters" Version="8.0.2" />
+    <PackageReference Include="Swashbuckle.AspNetCore.Newtonsoft" Version="6.6.2" />
   </ItemGroup>
 
   <ItemGroup>
