Done BookList and partly BookAdd

--- a/Assignments/EF_Core_Assignment1/EF_Core_Assignment1.WebAPI/appsettings.Development.json
+++ b/Assignments/EF_Core_Assignment1/EF_Core_Assignment1.WebAPI/appsettings.Development.json
@@ -7,5 +7,9 @@
   },
   "ConnectionStrings": {
     "SqlServer": "Server=localhost;Database=nashtech;User Id=sa;Password=YourStrong!Passw0rd;TrustServerCertificate=True"
+  },
+  "BorrowingSettings": {
+    "MaxBooksPerRequest": 5,
+    "MaxRequestsPerMonth": 3
   }
 }
