--- a/Assignments/ReactDay5/vite-project/package.json
+++ b/Assignments/ReactDay5/vite-project/package.json
@@ -17,13 +17,15 @@
     "@mui/material": "^5.15.18",
     "antd": "^5.17.4",
     "axios": "^1.7.2",
+    "formik": "^2.4.6",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-helmet-async": "^2.0.5",
     "react-router-dom": "^6.23.1",
     "react-scrollbars-custom": "^4.1.1",
-    "simplebar-react": "^3.2.5"
+    "simplebar-react": "^3.2.5",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@types/lodash": "^4.17.4",
