--- a/Assignments/ReactDay5/vite-project/package.json
+++ b/Assignments/ReactDay5/vite-project/package.json
@@ -13,8 +13,10 @@
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
     "@iconify/react": "^4.1.1",
+    "@mui/icons-material": "^5.15.19",
     "@mui/lab": "^5.0.0-alpha.170",
     "@mui/material": "^5.15.18",
+    "@mui/styled-engine": "^5.15.14",
     "antd": "^5.17.4",
     "axios": "^1.7.2",
     "formik": "^2.4.6",
